src/objects/collect__Collection_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>collect__Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collection_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Enabled_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Collection Strategy</label>
    <listViews>
        <fullName>collect__All</fullName>
        <columns>NAME</columns>
        <columns>collect__Account_Manager__c</columns>
        <columns>collect__Product_Name__c</columns>
        <columns>collect__Enabled_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>